# 20240510_memory-safe-apps-with-rust

./: Cargo.toml  README.md
projects/01_mutable_variables/: Cargo.toml
projects/01_mutable_variables/src/: main.rs
projects/02_mutable_structs/: Cargo.toml
projects/02_mutable_structs/src/: counter.rs  main.rs
projects/03_mutable_boxes/: Cargo.toml
projects/03_mutable_boxes/src/: main.rs
projects/04_moving_or_borrowing/: Cargo.toml
projects/04_moving_or_borrowing/src/: main.rs
projects/05_iteration_borrowing/: Cargo.toml
projects/05_iteration_borrowing/src/: cart_item.rs  main.rs
projects/06_iteration_moving/: Cargo.toml
projects/06_iteration_moving/src/: main.rs  product_inventory.rs
projects/07_references/src/: main.rs
projects/08_box_dyn_error/: Cargo.toml  config.yml
projects/08_box_dyn_error/src/: config.rs  main.rs
projects/09_closure/src/: main.rs
projects/10_lifetime/src/: contact_borrow.rs  contact_move.rs  main.rs
projects/11_concurrent/: Cargo.toml
projects/11_concurrent/src/: main.rs
